add new changes i.e filters etc

--- a/src/app/Components/common/Components/off-canvas-side-bar/off-canvas-side-bar.component.html
+++ b/src/app/Components/common/Components/off-canvas-side-bar/off-canvas-side-bar.component.html
@@ -13,6 +13,7 @@
           class="btn-close"
           data-bs-dismiss="offcanvas"
           aria-label="Close"
+          (click)="onClose()"
         ></button>
       </div>
       <div class="offcanvas-body" style="margin-top: 0px;">
