--- a/src/app/Components/home-page/menu-bar/menu-bar.component.html
+++ b/src/app/Components/home-page/menu-bar/menu-bar.component.html
@@ -101,7 +101,7 @@
               <i class="fa-solid fa-user"></i>
             </button>
             <ul class="dropdown-menu dropdown-menu-end _profile_dd" aria-labelledby="dropdownMenu2">
-              <li><p class="dropdown-item pl-2" style="margin: 0px;padding: 0px;padding-left: 15px;">Welcome! {{loginDetails.fullName}}</p></li>
+              <li><p class="dropdown-item pl-2" style="margin: 0px; margin-right: 12px;padding-left: 15px;  background-color: #eeeeee;">Welcome! {{loginDetails.fullName}}</p></li>
               <li><hr class="dropdown-divider"></li>
              @if(!isUserLogin){
                 <li><button class="dropdown-item" type="button" (click)="openModal()">Login</button></li>
