--- a/src/app/Components/products-list-page/products-list-page.component.html
+++ b/src/app/Components/products-list-page/products-list-page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-2 col-sm-12 d-none d-md-block">
-			<products-filters></products-filters>
+			<products-filters (filtersEvent)="receiveFilters($event)"></products-filters>
 		</div>
 		<div class="col-md-10 col-sm-12">
 			<products-list></products-list>
