changes in order tracking page

--- a/src/app/Components/order-tracking/order-tracking.component.html
+++ b/src/app/Components/order-tracking/order-tracking.component.html
@@ -62,7 +62,7 @@
                     <strong>Tracking Number:</strong> 98234-223
                 </li>
                 <li class="list-group-item">
-                    <strong>Estimated Delivery:</strong> Jan 10, 2025
+                    <strong>Estimated Delivery:</strong>  {{estimatedDeliveryDate | date: 'MMM dd, yyyy'}}
                 </li>
             </ul>
         </section>
