add category routes and updated sale name

--- a/src/app/Components/home-page/trending/trending.component.html
+++ b/src/app/Components/home-page/trending/trending.component.html
@@ -51,6 +51,6 @@
         <!-- <h5 class="card-title">Special Offer</h5> -->
         <!-- <p class="card-text">Get amazing deals & offers on Shirts, T-Shirts, Pants, Shoes, Shorts, Jackets, Blazers, Caps,  etc.</p> -->
         <p class="card-text">Special offer upto <span class="blink_me" style="font-weight: bold;font-size: 20px;">60%
-                Off</span> on Christmas sale !</p>
+                Off</span> on Ugadi Festival sale !</p>
     </div>
 </div>
