--- a/src/app/Components/home-page/categories/categories.component.html
+++ b/src/app/Components/home-page/categories/categories.component.html
@@ -45,7 +45,7 @@
   </div>
   <div class="row overflow-auto flex-nowrap custom-scroll">
     @for (item of categoriesList$ | async; track $index) {
-    <div class="col-6 col-sm-4 col-md-3 col-lg-2 text-center d-inline-block" style="cursor: pointer;">
+    <div class="col-6 col-sm-4 col-md-3 col-lg-2 text-center d-inline-block" style="cursor: pointer;" (click)="viewProduct(item)">
       <img src={{item.imageUrl}} class="img-fluid rounded-circle category-image" alt={{item.name}}>
       <p class="mt-3" style="color: black; font-size: 15px;">{{item.name}}</p>
     </div>
